--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,22 @@
       <dependency>
          <groupId>io.vertx</groupId>
          <artifactId>vertx-core</artifactId>
-         <version>3.3.3</version>
+         <version>3.4.2</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vertx</groupId>
+         <artifactId>vertx-hazelcast</artifactId>
+         <version>3.4.2</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vertx</groupId>
+         <artifactId>vertx-web-client</artifactId>
+         <version>3.4.2</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vertx</groupId>
+         <artifactId>vertx-lang-js</artifactId>
+         <version>3.4.2</version>
       </dependency>
    </dependencies>
 
